<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="18dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:paddingVertical="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:paddingHorizontal="24dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/welcome_label"
            android:textColor="@color/colorTextDark"
            android:textSize="34sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:paddingHorizontal="24dp"
            android:text="@string/welcome_text_2"
            android:textColor="@color/colorTextDark"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_weight="3"
                android:layout_marginLeft="24dp"
                android:elevation="8dp"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="normal"
                app:backgroundTint="@color/teal_700" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/or"
                android:textColor="@color/teal_700"
                android:textSize="18sp" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_weight="3"
                android:layout_marginRight="24dp"
                android:elevation="8dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="normal"
                app:backgroundTint="@color/teal_700" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>