<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:src="@mipmap/arrow_back_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorTextDark" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:orientation="vertical"
        android:paddingHorizontal="34dp"
        android:clipToPadding="false"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/colorTextDark"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/login"
            android:textColor="@color/colorTextDark"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/login_input"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginBottom="12dp"
            android:inputType="textNoSuggestions"
            android:padding="8dp"
            android:paddingStart="16dp"
            android:rotationY="1"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/password"
            android:textColor="@color/colorTextDark"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginBottom="26dp"
            android:inputType="textNoSuggestions"
            android:padding="8dp"
            android:paddingStart="16dp"
            android:textColor="@color/black"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:elevation="8dp"
            android:insetTop="0dp"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:backgroundTint="@null" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingHorizontal="34dp"
        android:paddingBottom="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:text="@string/bottom_label_login"
            android:textColor="@color/colorTextDark"
            android:textSize="18sp" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:elevation="8dp"
            android:insetTop="0dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:backgroundTint="@null" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>